cluster/apps/home-automation/pihole/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "${SECRET_CERTIFICATE_DEFAULT}"
